incorporated design elements for form pages

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,2 +1,3 @@
 @import './components/FormPage.scss';
-@import './components/UserProfile.scss'
+@import './components/UserProfile.scss';
+@import './components/NavBar.scss';
