--- a/client/src/styles/components/FormPage.scss
+++ b/client/src/styles/components/FormPage.scss
@@ -59,6 +59,7 @@ footer{
   background-image: url("../images/1563572.gif");
   background-size: auto 100%;
   background-position: center bottom;
+  height: 15vh;
 }
 
 
@@ -117,4 +118,10 @@ li:hover {
   cursor: pointer;
   letter-spacing: 0.25em;
   transition: 0.3s;
+}
+
+.form-col{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
