--- a/client/src/styles/components/FormPage.scss
+++ b/client/src/styles/components/FormPage.scss
@@ -56,7 +56,7 @@ footer{
   margin: 0;
   bottom: 0;
   background: linear-gradient(to top, rgba(51, 51, 51, 0.5), rgba(51, 51, 51, 0.1));
-  background-image: url(../images/1563572.gif);
+  background-image: url("../images/1563572.gif");
   background-size: auto 100%;
   background-position: center bottom;
   height: 15vh;
