--- a/client/src/styles/components/FormPage.scss
+++ b/client/src/styles/components/FormPage.scss
@@ -26,11 +26,12 @@ body {
 }
 
 h1, h3{
-  background-color: rgba(51, 51, 51, 0.8);
+  // background-color: rgba(51, 51, 51, 0.8);
   width: 15rem;
   display: flex;
   justify-content: center;
   margin: inherit;
+  text-align: center;
 }
 
 
