--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,3 +1,5 @@
 @import './components/FormPage.scss';
 @import './components/UserProfile.scss';
 @import './components/NavBar.scss';
+@import './components/SearchPage.scss';
+@import './components/GetPendingSongs.scss';
