--- a/client/src/styles/components/NavBar.scss
+++ b/client/src/styles/components/NavBar.scss
@@ -1,5 +1,18 @@
+.nav-wrapper {
+  position: relative;
+}
+
 .nav-bar{
   opacity: 0.5;
   color: black;
   margin-bottom: 15px;
+  position: absolute;
+  top: 0;
+  justify-content: flex-start;
+  background: linear-gradient(to bottom, rgba(51, 51, 51, 0.5), rgba(51, 51, 51, 0));
+}
+
+.bg-light {
+  border-radius: 5px;
+  --bs-bg-opacity: 0.5;
 }
