created scss page for recommend song page

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -3,3 +3,4 @@
 @import './components/NavBar.scss';
 @import './components/SearchPage.scss';
 @import './components/GetPendingSongs.scss';
+@import './components/RecommendSong.scss';
