--- a/client/src/styles/components/NavBar.scss
+++ b/client/src/styles/components/NavBar.scss
@@ -1,5 +1,9 @@
 .nav-wrapper {
   position: relative;
+  background: repeating-linear-gradient(45deg, rgb(117, 108, 108), transparent 8px);
+  // font-family: Flamenco;
+  font-size:large;
+  color: black;
 }
 
 .nav-bar{
